# p2p-transmission

./: .dockerignore  .gitignore  .impeccable.md  Cargo.toml  DESIGN.md  PRODUCT.md  README.md  THIRD_PARTY_NOTICES.md  package.json  rust-toolchain.toml
.github/workflows/: production-health.yml  production.yml  rust-v2.yml  verify.yml
.impeccable/: design.json
.impeccable/critique/: 2026-07-11T04-01-14Z__src-app-tsx.md
.impeccable/live/: config.json
apps/web/: .env.example  README.md  index.html  package-lock.json  package.json  playwright.config.ts  playwright.rust.config.ts  playwright.rust.stress.config.ts  playwright.spike.config.ts  playwright.v2.config.ts  playwright.v2.stress.config.ts  vite.config.ts  vitest.config.ts
apps/web/e2e/: compat.spec.ts  fixtures.ts  room-transfer.spec.ts  room.spec.ts  rust-spike.capture.ts  shell.spec.ts  transfer.spec.ts  v1-baseline.spec.ts  v2-compat.spec.ts  v2-large-file.stress.spec.ts  v2-room.spec.ts  v2-shell.spec.ts  v2-transfer.spec.ts
apps/web/public/: manifest.json  sw.js
apps/web/src/: App.test.tsx  App.tsx  index.css  main.tsx  service-worker.test.ts
deploy/: .env.example  README.md  compose.yml
deploy/api/: Dockerfile
deploy/caddy/: Caddyfile
deploy/coturn/: README.md  compose.yml  turnserver.conf.example
deploy/nginx/: p2p.yxswy.com.http.conf  p2p.yxswy.com.https.conf
deploy/production/: .env.example  Dockerfile  Dockerfile.dockerignore  bootstrap-host.sh  compose.yml
deploy/production/nginx/: p2p.yxswy.com.conf
deploy/production/ssh/: 60-p2p-deploy.conf
deploy/production/sudoers/: p2p-transmission-deploy
deploy/scripts/: build_deployment_supervisor.py  deploy-release.py  deploy_test_support.py  deployment-supervisor.py  deployment_supervisor_test_support.py  legacy-deploy-bridge.py  p2p-transmission-deploy.sh  test_control_plane_architecture.py  test_control_plane_artifacts.py  test_control_plane_capacity.py  test_control_plane_cli_binding.py  test_control_plane_database.py  test_control_plane_manifest_bootstrap.py  test_control_plane_offsite_backup.py  test_control_plane_release_state.py  test_control_plane_runtime.py  test_control_plane_runtime_maintenance.py  test_control_plane_workflow_contract.py  test_deploy_release.py  test_deployment_supervisor_architecture.py  test_deployment_supervisor_bundle.py  test_deployment_supervisor_cli.py  test_deployment_supervisor_diagnostics.py  test_deployment_supervisor_monitor.py  test_deployment_supervisor_security.py  test_deployment_supervisor_state.py  test_deployment_supervisor_worker.py  test_docker_image_archive.py  test_legacy_deploy_bridge.py  test_release_state_cleanup.py  test_verify_public_release.py  verify-public-release.py
deploy/v2/: .env.example  Dockerfile  Dockerfile.dockerignore  compose.yml  nginx.conf.example
deploy/web/: Dockerfile  nginx.conf
docs/: YXSwy-部署文档.md  deployment.md  reference-review.md  user-guide.md
docs/product-baseline/: README.md  accessibility.md  flows.md  motion.md  performance.md  states.md
docs/release/: QUALITY-AUDIT.md  README.md  RELEASE.md
docs/rust-v2/: QUALITY-AUDIT.md  README.md  RELEASE.md
e2e/: accessibility.spec.ts  browser-interop.spec.ts  compat.spec.ts  large-file.stress.spec.ts  performance.spec.ts  playwright.config.ts  playwright.interop.config.ts  playwright.performance.config.ts  playwright.public.config.ts  playwright.smoke.config.ts  playwright.stress.config.ts  public-release.spec.ts  room-code.helper.ts  room.helper.ts  room.spec.ts  shell.spec.ts  text-transfer.spec.ts  transfer-limits.spec.ts  transfer-reload.spec.ts  transfer-resume.spec.ts  transfer-storage.helper.ts  transfer-storage.spec.ts  transfer.helper.ts  transfer.spec.ts
rust/: README.md
rust/apps/server/: Cargo.toml
rust/apps/server/assets/: app-shell.js  landing.css  landing.html  landing.js  manifest.webmanifest  room-restore.js  sw.js
rust/apps/server/migrations/: 202607150001_initial.sql
rust/apps/server/src/: config.rs  http_api.rs  lib.rs  main.rs  maintenance.rs  observability.rs  rate_limit.rs  services.rs  web_shell.rs
rust/apps/server/src/realtime/: hub.rs  mod.rs  socket.rs
rust/apps/server/src/realtime/socket/: commands.rs
rust/apps/server/src/realtime/socket/commands/: errors.rs
rust/apps/server/src/storage/: codec.rs  error.rs  mod.rs  tests.rs
rust/crates/browser-platform/: Cargo.toml
rust/crates/browser-platform/src/: api.rs  capabilities.rs  error.rs  lib.rs  lifecycle.rs  navigation.rs  realtime.rs  rtc.rs  session_storage.rs  source_storage.rs  stream_recovery.rs  stream_storage.rs  ui.rs
rust/crates/browser-platform/src/rtc/: checkpoint.rs  finalization.rs  manifest.rs  wire.rs
rust/crates/browser-platform/src/rtc/browser/: connection.rs  control.rs  files.rs  incoming.rs  mod.rs  outgoing.rs  peer.rs  recovery.rs  signaling.rs  text.rs
rust/crates/browser-platform/src/rtc/browser/lifecycle/: commands.rs  events.rs  manifest.rs  mod.rs  reconnect.rs
rust/crates/browser-platform/src/rtc/browser/recovery/: incoming.rs  mod.rs  outgoing.rs
scripts/: build_app_icons.py  capture_shell.py  capture_v1_baseline.py  capture_v2_shell.py  check-doc-links.py  check_coturn_config.py  check_documentation_consistency.py  check_server_architecture.py  check_version_contract.py  check_web_architecture.py  check_web_bundle.py  dev.py  dev_v2.py  service-worker.test.ts  test_check_coturn_config.py  test_e2e.py  test_large_file.py  test_rust_spike.py  test_v2_e2e.py  test_v2_large_file.py  verify.py  verify_v2.py
services/api/: .env.example  README.md  package.json
spikes/dioxus-webrtc/: Cargo.toml  README.md
spikes/dioxus-webrtc/protocol/: Cargo.toml
spikes/dioxus-webrtc/protocol/src/: lib.rs
spikes/dioxus-webrtc/server/: Cargo.toml
spikes/dioxus-webrtc/server/src/: main.rs
spikes/dioxus-webrtc/web/: Cargo.toml  Dioxus.toml
spikes/dioxus-webrtc/web/assets/: main.css
spikes/dioxus-webrtc/web/src/: main.rs  peer.rs
v2/: README.md
v2/apps/web/: Cargo.toml  Dioxus.toml  index.html
v2/apps/web/assets/: main.css
v2/apps/web/src/: main.rs
(+315 files in other folders)
