[workspace]
members = [
  "v2/apps/server",
  "v2/apps/web",
  "v2/crates/browser-platform",
  "v2/crates/domain",
  "v2/crates/protocol",
  "v2/crates/test-support",
  "v2/crates/transfer",
]
default-members = [
  "v2/apps/server",
  "v2/crates/domain",
  "v2/crates/protocol",
  "v2/crates/test-support",
  "v2/crates/transfer",
]
exclude = ["spikes/dioxus-webrtc"]
resolver = "2"

[workspace.package]
version = "2.0.1"
edition = "2024"
rust-version = "1.97"
license = "MIT"
repository = "https://github.com/puzzle-fuzzy/p2p-transmission"

[workspace.dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["ws"] }
axum-extra = { version = "0.12.6", features = ["cookie"] }
base64 = "0.22.1"
blake3 = "1.8.2"
console_error_panic_hook = "0.1.7"
dioxus = { version = "=0.7.6", features = ["web"] }
futures-util = "0.3.32"
futures-channel = "0.3.32"
http-body-util = "0.1.3"
hmac = "0.12.1"
qrcode = { version = "0.14.1", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.149"
sha1 = "0.10.6"
sha2 = "0.10.9"
sqlx = { version = "0.9.0", default-features = false, features = ["macros", "migrate", "runtime-tokio", "sqlite"] }
thiserror = "2.0.18"
time = "0.3.53"
tokio = { version = "1.49.0", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = "0.29.0"
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.8", features = ["fs", "set-header", "timeout", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.23.5", features = ["v4"] }
wasm-bindgen = "0.2.106"
wasm-bindgen-futures = "0.4.56"
web-sys = "0.3.83"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
panic = "abort"
strip = "debuginfo"
