[workspace]
members = [
  "rust/apps/server",
  "rust/apps/web",
  "rust/crates/browser-platform",
  "rust/crates/domain",
  "rust/crates/protocol",
  "rust/crates/transfer",
  "rust/crates/ui-shell",
]
default-members = [
  "rust/apps/server",
  "rust/crates/domain",
  "rust/crates/protocol",
  "rust/crates/transfer",
  "rust/crates/ui-shell",
]
resolver = "2"

[workspace.package]
version = "2.0.1"
edition = "2024"
rust-version = "1.97"
license = "MIT"
repository = "https://github.com/puzzle-fuzzy/p2p-transmission"

[workspace.dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["ws"] }
axum-extra = { version = "0.12.6", features = ["cookie"] }
base64 = "0.22.1"
blake3 = "1.8.2"
console_error_panic_hook = "0.1.7"
dioxus = { version = "=0.7.6", default-features = false, features = ["macro", "html", "signals"] }
dioxus-ssr = { version = "=0.7.6", default-features = false }
futures-util = "0.3.32"
futures-channel = "0.3.32"
http-body-util = "0.1.3"
hmac = "0.12.1"
qrcode = { version = "0.14.1", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha1 = "0.10.6"
sha2 = "0.10.9"
sqlx = { version = "0.9.0", default-features = false, features = ["macros", "migrate", "runtime-tokio", "sqlite"] }
thiserror = "2.0.18"
time = "0.3.53"
tokio = { version = "1.49.0", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = "0.29.0"
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.8", features = ["fs", "set-header", "timeout", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.23.5", features = ["v4"] }
wasm-bindgen = "0.2.106"
wasm-bindgen-futures = "0.4.56"
web-sys = "0.3.83"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
panic = "abort"
strip = "debuginfo"

# Dioxus builds browser bundles with this custom profile. Favor minimum size for
# UI-facing crates while transfer and hashing dependencies retain `opt-level = "s"`.
[profile.wasm-release]
inherits = "release"
# Whole-program LTO removes duplicate framework and Web API glue without
# changing the transfer/hashing optimization level.
lto = "fat"

[profile.wasm-release.package.p2p-web]
opt-level = "z"

[profile.wasm-release.package.p2p-ui-shell]
opt-level = "z"

# Keep transfer, hashing, protocol, and browser I/O code at `opt-level = "s"`,
# while favoring download size for the UI framework runtime.
[profile.wasm-release.package.dioxus]
opt-level = "z"

[profile.wasm-release.package.dioxus-core]
opt-level = "z"

[profile.wasm-release.package.dioxus-core-types]
opt-level = "z"

[profile.wasm-release.package.dioxus-devtools]
opt-level = "z"

[profile.wasm-release.package.dioxus-devtools-types]
opt-level = "z"

[profile.wasm-release.package.dioxus-document]
opt-level = "z"

[profile.wasm-release.package.dioxus-history]
opt-level = "z"

[profile.wasm-release.package.dioxus-hooks]
opt-level = "z"

[profile.wasm-release.package.dioxus-html]
opt-level = "z"

[profile.wasm-release.package.dioxus-interpreter-js]
opt-level = "z"

[profile.wasm-release.package.dioxus-signals]
opt-level = "z"

[profile.wasm-release.package.dioxus-stores]
opt-level = "z"

[profile.wasm-release.package.dioxus-web]
opt-level = "z"
