[workspace]
members = ["protocol", "server", "web"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.97"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tracing = "0.1.44"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
panic = "abort"
strip = "debuginfo"
