[package]
name = "p2p-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
axum-extra.workspace = true
base64.workspace = true
futures-util.workspace = true
hmac.workspace = true
p2p-domain = { path = "../../crates/domain" }
p2p-protocol = { path = "../../crates/protocol" }
serde_json.workspace = true
sha1.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
http-body-util.workspace = true
serde.workspace = true
tokio-tungstenite.workspace = true
tower.workspace = true
