[package]
name = "p2p-spike-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
axum = { version = "0.8.9", features = ["ws"] }
futures-util = "0.3.32"
p2p-spike-protocol = { path = "../protocol" }
serde_json.workspace = true
tokio = { version = "1.52.3", features = ["macros", "net", "rt-multi-thread", "signal", "sync"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
