[package]
name = "p2p-spike-web"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
blake3 = "1.8.5"
console_error_panic_hook = "0.1.7"
dioxus = { version = "=0.7.6", features = ["web"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
js-sys = "0.3.103"
p2p-spike-protocol = { path = "../protocol" }
serde_json.workspace = true
thiserror.workspace = true
wasm-bindgen = "0.2.126"
wasm-bindgen-futures = "0.4.76"

[dependencies.web-sys]
version = "0.3.103"
features = [
  "Blob",
  "BlobPropertyBag",
  "CloseEvent",
  "Document",
  "Event",
  "File",
  "FileList",
  "HtmlAnchorElement",
  "HtmlInputElement",
  "Location",
  "MessageEvent",
  "RtcConfiguration",
  "RtcDataChannel",
  "RtcDataChannelEvent",
  "RtcDataChannelState",
  "RtcDataChannelType",
  "RtcIceCandidate",
  "RtcIceCandidateInit",
  "RtcPeerConnection",
  "RtcPeerConnectionIceEvent",
  "RtcPeerConnectionState",
  "RtcSdpType",
  "RtcSessionDescriptionInit",
  "Url",
  "WebSocket",
  "Window",
]
